--- a/css/main.css
+++ b/css/main.css
@@ -2038,7 +2038,7 @@ textarea.form-control {
   .progress-container.progress-neutral .progress-badge {
     color: #FFFFFF; }
   .progress-container.progress-primary .progress {
-    background: rgba(55, 140, 63, 0.4); }
+    background: #979797; }
   .progress-container.progress-primary .progress-bar {
     background: #003399; }
   .progress-container.progress-primary .progress-value,
@@ -2054,10 +2054,10 @@ textarea.form-control {
   .progress-container.progress-success .progress {
     background: rgba(24, 206, 15, 0.3); }
   .progress-container.progress-success .progress-bar {
-    background: #003399; }
+    background: #0077B5; }
   .progress-container.progress-success .progress-value,
   .progress-container.progress-success .progress-badge {
-    color: #003399; }
+    color: #0077B5; }
   .progress-container.progress-warning .progress {
     background: rgba(255, 178, 54, 0.3); }
   .progress-container.progress-warning .progress-bar {
