--- a/css/main.css
+++ b/css/main.css
@@ -2376,7 +2376,7 @@ body {
     background-color: #378C3F; }
 
 .nav-pills .nav-item .nav-link {
-  padding: 0 15.5px;
+  padding: 0;
   text-align: center;
   height: 60px;
   width: 60px;
@@ -2384,15 +2384,20 @@ body {
   color: #9A9A9A;
   margin-right: 19px;
   background-color: rgba(222, 222, 222, 0.3);
-  border-radius: 30px; }
-  .nav-pills .nav-item .nav-link:hover {
-    background-color: rgba(222, 222, 222, 0.3); }
-  .nav-pills .nav-item .nav-link.active, .nav-pills .nav-item .nav-link.active:focus, .nav-pills .nav-item .nav-link.active:hover {
-    background-color: #9A9A9A;
-    color: #FFFFFF;
-    box-shadow: 0px 5px 35px 0px rgba(0, 0, 0, 0.3); }
-  .nav-pills .nav-item .nav-link.disabled, .nav-pills .nav-item .nav-link:disabled, .nav-pills .nav-item .nav-link[disabled] {
-    opacity: .5; }
+  border-radius: 30px;
+  overflow: hidden;
+}
+.nav-pills .nav-item .nav-link:hover {
+  background-color: rgba(222, 222, 222, 0.3); 
+}
+.nav-pills .nav-item .nav-link.active, .nav-pills .nav-item .nav-link.active:focus, .nav-pills .nav-item .nav-link.active:hover {
+  background-color: #9A9A9A;
+  color: #FFFFFF;
+  box-shadow: 0px 5px 35px 0px rgba(0, 0, 0, 0.3); 
+}
+.nav-pills .nav-item .nav-link.disabled, .nav-pills .nav-item .nav-link:disabled, .nav-pills .nav-item .nav-link[disabled] {
+  opacity: .5; 
+}
 
 .nav-pills .nav-item i {
   display: block;
@@ -2407,7 +2412,8 @@ body {
     color: #378C3F; }
 
 .nav-pills.nav-pills-primary .nav-item .nav-link.active, .nav-pills.nav-pills-primary .nav-item .nav-link.active:focus, .nav-pills.nav-pills-primary .nav-item .nav-link.active:hover {
-  background-color: #378C3F; }
+  border: 5px solid #004085; 
+}
 
 .nav-pills.nav-pills-info .nav-item .nav-link.active, .nav-pills.nav-pills-info .nav-item .nav-link.active:focus, .nav-pills.nav-pills-info .nav-item .nav-link.active:hover {
   background-color: #2CA8FF; }
@@ -5000,6 +5006,10 @@ Created using IcoMoon - icomoon.io
     transform: translateY(-50%); } }
 
 /* Images Gallery Style*/
+.cc-porfolio-image {
+  width: fit-content;
+  margin: 0 auto;
+}
 .gallery .cc-porfolio-image figure {
   position: relative;
   overflow: hidden;
@@ -5289,3 +5299,11 @@ a.credit {
 /* Common Style */
 .section {
   padding-bottom: 0; }
+
+
+.port-col {
+  max-width: fit-content;
+}
+.port-row {
+  justify-content: center;
+}
